<resources>
    <string name="app_name">烈狐筋斗云</string>


    <!--  注册登录时所用String  ===============================================================================-->

    <string name="login_or_re_userinfo">手机号/邮箱/烈狐ID</string>
    <string name="secret">密码</string>
    <string name="login_text">登录</string>
    <string name="register_text">注册</string>
    <string name="forget_secret">忘记密码</string>
    <string name="other_method_login">其他方式登录</string>
    <string name="login_mode_info">账号信息不互通</string>
    <string name="use_agree">使用即同意</string>
    <string name="liehu_agreement">《烈狐用户协议》</string>
    <string name="wrong_username">2—6位字符、只能为汉字、数字、英文字母(区分大小写)、“-”、“_”, 其他特殊字符不可以使用</string>
    <string name="wrong_password">2—6位字符、只能为数字、英文字母(区分大小写)、“-”、“_”、“%”、“$”、其他特殊字符不可以使用</string>
    <string name="wrong_phonenum">11位数字</string>
    <string name="wrong_mail">错误的邮箱地址</string>
    <string name="input_nickname">输入昵称：</string>
    <string name="input_secret">输入密码：</string>
    <string name="repeat_secret">重复密码：</string>
    <string name="password_notmatch">两次密码不匹配</string>
    <string name="input_phonenum">手机号：</string>
    <string name="input_mail">邮箱地址：</string>
    <string name="countinue_register">完成注册</string>
    <string name="here_input_telnum">在此输入手机号</string>
    <string name="get_phone_confirm_code">获取验证码</string>
    <string name="here_input_confirm_code">在此输入验证码</string>
    <string name="reset_secret">重置密码</string>
    <string name="suer">确定</string>
    <string name="no_user">无此用户</string>
    <string name="wrong_pass">密码错误</string>
    <string name="has_thisName">已有此用户</string>

    <!-- ====================================================================================================  -->


    <!-- 主功能页面所用String ====================================================================================-->
    <string name="food">饮食</string>
    <string name="execise">运动</string>
    <string name="friends">社交</string>
    <string name="happy">娱乐</string>

    <!-- ======================================================================================================-->


    <!-- food模块页面所用String ====================================================================================-->
    <string name="scanOf_scan">扫一扫</string>
    <string name="setting">设置</string>

    <string name="mybody">我的</string>
    <string name="mybody_shape">身体变化</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="Bust">胸围</string>
    <string name="waistline">腰围</string>
    <string name="hipline">臀围</string>
    <string name="body_fat_rate">体脂率</string>
    <string name="muscle_volume">肌肉量</string>
    <string name="record_body_change">记录你的身体变化趋势</string>
    <string name="not_record">未记录</string>
    <string name="select_height">选择身高</string>
    <string name="height_cm">CM</string>
    <string name="weight_kg">KG</string>
    <string name="percent_text">%</string>
    <string name="weight_newest">最新体重</string>
    <string name="weight_plan">目标体重</string>
    <string name="not_more_record">没有更多纪录了</string>
    <string name="recode_weight">纪录体重</string>
    <string name="weight_history">历史纪录</string>
    <string name="bust_newest">最新胸围</string>
    <string name="bust_plan">目标胸围</string>
    <string name="bust_record">记录胸围</string>
    <string name="muscle_newest">最新肌肉量</string>
    <string name="muscle_plan">目标肌肉量</string>
    <string name="muscle_record">记录肌肉量</string>
    <string name="fatrate_newest">最新体脂率</string>
    <string name="fatrate_plan">目标体脂率</string>
    <string name="fatrate_record">记录体脂率</string>


    <!-- 形体 -->
    <string name="bodyShape">形体</string>
    <string name="take_body_photo">拍照</string>


    <string name="myplan">计划</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="dinner">晚餐</string>
    <string name="choose_food_kind">选择  ></string>
    <string name="choose_food">选择食物</string>

    <!-- 计划模块所用String -->
    <string name="no_body_plan">您暂无任何计划</string>
    <string name="no_body_plan1">赶快制定一个吧！</string>
    <string name="to_decline_fat">减脂</string>
    <string name="to_add_fat">增肌</string>
    <string name="add_muscle_plan_step1">增肌计划(1/3)</string>
    <string name="add_muscle_plan_step2">增肌计划(2/3)</string>
    <string name="add_muscle_plan_step3">增肌计划(3/3)</string>
    <string name="not_muscle_record">还未有肌肉量的记录</string>
    <string name="now_to_add">+马上添加</string>
    <string name="now_muscle_content">目前肌肉量是</string>
    <string name="plan_muscle">目标肌肉量是</string>
    <string name="plan_muscle_time">达到目标时间</string>
    <string name="decline_fat_plan_step1">减脂计划(1/3)</string>
    <string name="decline_fat_plan_step2">减脂计划(2/3)</string>
    <string name="decline_fat_plan_step3">减脂计划(3/3)</string>
    <string name="not_fat_record">还未有体脂率的记录</string>
    <string name="plan_fat">目标体脂率是</string>
    <string name="plan_fat_time">达到目标时间</string>
    <string name="now_fat_content">现在体脂率为</string>
    <string name="next_step">下一步</string>
    <string name="alter">修改</string>
    <string name="complete">完成</string>
    <string name="select_plan_muscle">选择目标肌肉量</string>

    <!-- ======================================================================================================-->

    <!-- execise 模块页面所用String ====================================================================================-->
    <string name="execise_run">跑步</string>
    <string name="execise_walk">健走</string>
    <string name="execise_bike">骑行</string>
    <string name="exe_exercise">锻炼</string>
    <string name="sheshiwendu">℃</string>


    <!-- ======================================================================================================-->


    <!-- friends模块页面所用String ====================================================================================-->
    <string name="add_friendsOrGroup">加好友/群</string>
    <string name="create_chatroom">创建群聊</string>
    <string name="comm_list">通话</string>
    <string name="myfriends">好友</string>
    <string name="chatroom">群聊</string>
    <string name="clear_history">清除历史记录</string>

    <!-- ======================================================================================================-->

    <!-- happy模块页面所用String ====================================================================================-->
    <string name="mydownload">我的下载</string>
    <string name="exercise_video">小视频</string>
    <string name="easy_aLittle">轻松一刻</string>
    <string name="little_game">小游戏</string>
    <string name="happy_attention">关注</string>
    <string name="loading">加载中...</string>
    <string name="erroring">出错了...</string>


    <!-- ======================================================================================================-->
</resources>
