<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activity.loginandregister.ResetSecret">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/reset_secret"
        android:background="@color/white">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/input_secret"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/reset_password_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:inputType="textPassword"
            android:textColor="#000" />

    </LinearLayout>

    <TextView
        android:id="@+id/reset_wrong_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wrong_password"
        android:textColor="#FF0000"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/repeat_secret"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reset_repassword_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:inputType="textPassword"
            android:textColor="#000" />

    </LinearLayout>

    <TextView
        android:id="@+id/reset_wrong_repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_notmatch"
        android:textColor="#FF0000"
        android:visibility="gone"/>

    <Button
        android:id="@+id/reset_secret_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:text="@string/suer"
        android:background="@drawable/change"/>

</LinearLayout>