<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activity.loginandregister.ForgetSecret">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/reset_secret"
        android:background="@color/white">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/reset_secret_phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:hint="@string/here_input_telnum"
            android:singleLine="true"
            android:textSize="20sp" />

        <Button
            android:id="@+id/reset_get_confirmCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/get_phone_confirm_code"
            android:textSize="18sp"
            android:background="@color/food_page_color"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <EditText
            android:id="@+id/reset_confirmCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/here_input_confirm_code"
            android:singleLine="true" />

        <Button
            android:id="@+id/sure_sendConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suer"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="#fff"
            android:background="@drawable/change"/>

    </LinearLayout>

</LinearLayout>