<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainFunctionView.FoodView.PlanActivity.AddMuscleActivity1">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/add_muscle_step_bar">

        <ImageButton
            android:id="@+id/from_add_muscle1_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon_white"
            android:background="@color/add_muscle_step_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_muscle_plan_step1"
            android:textColor="@color/light_dark"
            android:textSize="18sp"
            android:layout_marginLeft="35dp"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/not_have_muscle_record"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/not_muscle_record"
            android:textSize="17sp"
            android:textColor="@color/uvv_gray"
            android:gravity="center"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/now_to_add"
            android:background="@drawable/now_add_record"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/have_fat_record_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/now_muscle_content"
            android:textColor="@color/light_dark"
            android:textSize="17sp"
            android:gravity="center_horizontal|bottom"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="33.33%"
                android:textSize="35sp"
                android:textColor="@color/light_dark"
                android:gravity="center_horizontal"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/alter"
                android:textSize="18sp"
                android:background="@drawable/alter_button"
                android:textColor="@color/white"
                android:layout_marginRight="120dp"
                android:layout_marginLeft="120dp"/>

        </LinearLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/add_muscle_step_bar"
            android:text="@string/next_step"
            android:textSize="20sp"
            android:textColor="@color/light_dark"/>

    </LinearLayout>

</LinearLayout>